--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body{
-  /* background: #352f5b; */
-  background: #222831;
+  background: #352f5b;
+  /* background: #222831; */
 }
 .container{
   max-width: 400px;
@@ -13,8 +13,8 @@ input[type=text]:focus{
   max-width: 400px;
 }
 .todos li{
-  /* background: #423a6f; */
-  background: #393E46;
+  background: #423a6f;
+  /* background: #393E46; */
 }
 .delete{
   cursor: pointer;
